# buddet

./: Cargo.toml  README.md  docker-compose.yml
buddet-core/: Cargo.toml
buddet-core/src/: user.rs
buddet-server/: Cargo.toml
buddet-server/src/: main.rs
buddet_core/: Cargo.toml
buddet_core/src/: lib.rs  user.rs  user_repository.rs
buddet_core/src/repository/: mod.rs  repository_error.rs
buddet_core/src/user/: mod.rs  user.rs  user_repository.rs
buddet_db/: Cargo.toml
buddet_db/entity/src/: lib.rs
buddet_db/entity_derive/: Cargo.toml
buddet_db/src/database/: database.rs  entity.rs  mod.rs  mongo_database.rs
buddet_db/src/user/: mod.rs  mongo_user_repository.rs  user_entity.rs
buddet_server/: Cargo.toml
buddet_server/src/: main.rs
buddet_server/src/user/: create_user_request.rs  mod.rs  user_payload.rs  user_response.rs
data/mongo/: 001_users.js  002_create_user_collection.js
entity/: Cargo.toml
entity/src/entity/: mod.rs
entity_derive/: Cargo.toml
entity_derive/src/: lib.rs
