[package]
name = "buddet-server"
version = "0.1.0"
authors = ["Nicolas Vargas Ortega <nvortega92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"