[package]
name = "buddet_core"
version = "0.1.0"
authors = ["Nicolas Vargas Ortega <nvortega92@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
entity = { path = "../entity", version = "0.1.0" }
entity_derive = { path = "../entity_derive", version = "0.1.0" }