[package]
name = "buddet_db"
version = "0.1.0"
authors = ["Nicolas Vargas Ortega <nvortega92@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
buddet_core = { path = "../buddet_core", version = "0.1.0" }
entity = { path = "../entity", version = "0.1.0" }
mongodb = "2.0.0-alpha"