[package]
name = "entity_derive"
version = "0.1.0"
authors = ["Nicolas Vargas Ortega <nvortega92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "entity_derive"
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
mongodb = "2.0.0-alpha"

[dev-dependencies]
entity = { path = "../entity", version = "0.1.0" }